[package]
name = "ikea-spider-experiment-server"
version = "0.1.0"
authors = ["Jacky Boen <jacky.boen@bartleboglehegarty.com"]

[dependencies]
iron = "*"
router = "*"
persistent = "*"
urlencoded = "*"
rustc-serialize = "*"

[dependencies.postgres]
version = "*"
features = [ "chrono" ]

[dependencies.chrono]
version = "*"
features = [ "rustc-serialize" ]
